WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69291
DFG backends don't have access to per-node predictions from the propagator
https://bugs.webkit.org/show_bug.cgi?id=69291
Summary
DFG backends don't have access to per-node predictions from the propagator
Filip Pizlo
Reported
2011-10-03 13:50:46 PDT
The DFG propagator has complete knowledge of how each node in the data flow graph is predicted. But this knowledge is lost when going to the backend. The backends try to reinfer this, but do so poorly (for example the backend has no idea how to predict a ConvertThis node, while the propagator knows exactly how to predict it).
Attachments
the patch
(19.63 KB, patch)
2011-10-03 14:01 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-10-03 14:01:46 PDT
Created
attachment 109527
[details]
the patch
Oliver Hunt
Comment 2
2011-10-03 17:35:12 PDT
Comment on
attachment 109527
[details]
the patch r=me
Filip Pizlo
Comment 3
2011-10-03 18:05:26 PDT
Landed in
r96562
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug